--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- ----------------First Part ---------------------------------->
     <section class="container-fluid  ">
-<div class="row row-cols-sm-1 text-white   bg-info  d-flex align-items-center p-5">
+<div class="row row-cols-sm-1 text-white   info-background  d-flex align-items-center p-5">
     
 <div class="col-lg-5  ">
 <p>Computer-controlled digital transistorized with electronic advance</p>
@@ -90,7 +90,7 @@
                 </ul>
 
 
-              <h6 class="text-primary ">Lonwabo Tsotsobe</h6>
+              <h6 class="text-primary ">Lonwabo Tsotsobef</h6>
                 <br>
                 <h6>Engineer</h6>
             </div>
@@ -202,16 +202,16 @@ If your helmet suffers any kind of impact, no matter how small, its protective q
   </div>
 <!-- --------------------------------Bonus part start -------------->
 <!-- ------------------------First Part ------------------------------------>
-<section class="bg-info">
-  <h1 class="text-center mb-5 rounded bg-warning w-100 ">Latest Videos </h1>
+<section class="info-background">
+  <h1 class="text-center mb-5 rounded bg-light w-100 ">Latest Videos </h1>
 <div class="d-flex justify-content-around">
 <div class="embed-responsive embed-responsive-16by9">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/TJ7rWCw9SrY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <h1 class="bg-danger">Honda CBR bike review-2021</h1>
+  <h1 class="bg-light">Honda CBR bike review-2021</h1>
 </div>
 <div class="embed-responsive embed-responsive-16by9">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/ROSbg3p-nrE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <h1 class="bg-danger">Honda CBR Latest Price&Specifications</h1>
+  <h1 class="bg-light">Honda CBR Latest Price&Specifications</h1>
 </div>
 </div>
 </section>
