--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
 </section>
 
 <!-- ------------------fourth part start -------------------------------->
-
+<section>
+<h1 class="text-center">Frequently Asked   <span id="special-color">Questions</span></h1>
   <div class="d-flex align-items-center mt-5 ms-5 p-5"  >
+   
 <div>
   <img class="w-75" src="images/faq.png" alt="">
 </div>
@@ -200,6 +202,7 @@ If your helmet suffers any kind of impact, no matter how small, its protective q
   </div>
 
   </div>
+</section>
 <!-- --------------------------------Bonus part start -------------->
 <!-- ------------------------First Part ------------------------------------>
 <section class="info-background">
